--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
           <li class="userCount"></li>
         </ul>
         <button id="clearHistory" class="btn btn-danger">Clear History</button>
+        <ul class="notification">
+          
+        </ul>
         <div class="status"></div>
         <ul class="messages">
           
